--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
     cursor: pointer;
 }
 
-header .container {
+header .header_container {
     padding-top: 225px;
 }
 
@@ -79,7 +79,7 @@ a {
 
 .overview {
 	text-align: center;
-	padding: 50px 0px;
+	padding: 20px 0px 50px 0px;
 
 	background-color: #f2a365;
 
@@ -108,4 +108,33 @@ a {
 	width:60%;
 	text-align: center;
 	margin:auto;
+}
+
+/* Grid */
+
+.grid-container {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto;
+	justify-content: center;
+	grid-column-gap: 50px;
+	padding-top: 30px;
+	margin: 0px 50px;
+}
+
+.grid-item {
+	text-align: center;
+}
+
+.grid-item h4 {
+	font-family: 'Coolvetica';
+	font-size: 22px;
+	letter-spacing: 2px;
+	color:#212121;
+}
+
+.grid-item p {
+	font-family: 'Nyata';
+	color:#4f4f4f;
+	font-size: 18px;
 }
