--- a/css/styles.css
+++ b/css/styles.css
@@ -190,3 +190,60 @@ body {
     }
 }
 
+.contact-form {
+    background-color: #222831;
+    display: block;
+    text-align: center;
+    margin:0;
+    padding: 30px 0;
+}
+
+input[type="text"], 
+input[type="email"],
+textarea {
+    display: block;
+    margin: 0 auto 20px auto;
+    background-color: #222831;
+    border-radius: 15px;
+    border: 5px solid #374254;
+    width: 500px;
+    
+}
+
+input[type="text"], 
+input[type="email"] {
+    padding: 10px;
+    line-height: 35px;
+}
+
+input, textarea {
+    outline: none;
+    color: white;
+    font-size: 24px;
+    font-family: 'Coolvetica';
+}
+
+input:focus {
+    box-shadow: 0 0 5px 2px #374254;
+}
+
+input[type="submit"] {
+    background-color: #222831;
+    outline: none;
+    border: 5px solid #374254;
+    border-radius: 15px;
+    padding:10px;
+    width: 100px;
+}
+
+textarea {
+    resize: none;
+    font-size: 14px;
+    padding: 10px;
+}
+
+svg[class="triangle"] {
+    margin: 0;
+    padding: 0;
+    display:block;
+}
